[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "lint_ebi"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    #    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "typer[all]>=0.12.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lint_ebi.rust"


[lint_ebi]
example = "example"
something = "this is something else"


[project.scripts]
lint-ebi = "lint_ebi.main:app"
